--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-/build/
-/.metadata/
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
