--- a/SimpleIR/.classpath
+++ b/SimpleIR/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/chungyeons/Downloads/jsoup-1.13.1.jar">
+	<classpathentry kind="lib" path="/Users/chungyeons/Downloads/Java Libraries/jsoup-1.13.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/chungyeons/Downloads/kkma-2.1.jar">
+	<classpathentry kind="lib" path="/Users/chungyeons/Downloads/Java Libraries/kkma-2.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
